collapsed sidebar ui issue reolved

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -15111,7 +15111,7 @@ be a descendant of the grid when it is being dragged.
     position: absolute;
     left: 50px;
     min-width: 180px;
-    padding: 12px 0;
+    /* padding: 12px 0; */
     opacity: 0;
     border-bottom-right-radius: 4px;
     z-index: 9;
