--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@
   }
 
   .treeview-item {
-    padding: 12px 15px 12px 25px;
+    padding: 10px 10px 10px 15px;
   }
 }
 
